force-app/main/default/objects/Gmail_Sync_Notification__e/Gmail_Sync_Notification__e.object-meta.xml
<CustomObject>
    <label>Gmail Sync Notification</label>
    <pluralLabel>Gmail Sync Notifications</pluralLabel>
</CustomObject>