force-app/main/default/objects/Gmail_Sync_Notification__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>The Salesforce Account ID related to the synced email.</description>
    <label>Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>