force-app/main/default/objects/Gmail_Sync_Notification__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Action type: RECEIVED, SENT, UPDATED, DELETED</description>
    <label>Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>