force-app/main/default/objects/Gmail_Sync_Notification__e/fields/MessageId__c.field-meta.xml
<CustomField>
    <fullName>MessageId__c</fullName>
    <description>The Gmail Message ID related to the notification.</description>
    <label>Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>