force-app/main/default/objects/Gmail_Sync_Notification__e/fields/ThreadId__c.field-meta.xml
<CustomField>
    <fullName>ThreadId__c</fullName>
    <description>The Gmail Thread ID related to the notification.</description>
    <label>Thread ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>