force-app/main/default/objects/Gmail_Sync_Notification__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Event occurrence timestamp.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>